--- a/package.json
+++ b/package.json
@@ -1,48 +1,36 @@
 {
-  "name": "seo-sentinel-final",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@tailwindcss/postcss7-compat": "^2.2.17",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "seo-audit-api",
+  "version": "1.0.0",
+  "description": "API service for generating SEO audit reports using Claude AI",
+  "main": "api/generate-report.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node api/generate-report.js",
+    "dev": "nodemon api/generate-report.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [
+    "seo",
+    "local-seo",
+    "audit",
+    "api",
+    "claude-ai"
+  ],
+  "author": "Seo Sentinel AI",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.1.5",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
-    "postcss-flexbugs-fixes": "^4.2.1",
-    "postcss-normalize": "^8.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^4.1.11"
+    "nodemon": "^2.0.22",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
